crates/ai/tests/snapshots/tool_outputs_parity__output_get_asset_taxonomy_assignments_fuzzy_name.snap
---
source: crates/ai/tests/tool_outputs_parity.rs
expression: result
---
{
  "ok": {
    "assetQuery": "Hospitality",
    "assignments": [],
    "resolvedAsset": {
      "assetId": "asset-aple",
      "currency": "USD",
      "displayCode": "APLE",
      "exchangeMic": "XNYS",
      "instrumentType": "EQUITY",
      "label": "APLE - Apple Hospitality REIT",
      "matchedBy": "name_fuzzy",
      "name": "Apple Hospitality REIT",
      "symbol": "APLE"
    }
  }
}
