crates/ai/tests/snapshots/tool_outputs_parity__output_get_asset_taxonomy_assignments_name_match.snap
---
source: crates/ai/tests/tool_outputs_parity.rs
expression: result
---
{
  "ok": {
    "assetQuery": "Apple Inc.",
    "assignments": [
      {
        "assignmentId": "assignment-1",
        "categoryId": "equity",
        "categoryKey": "equity",
        "categoryName": "Equity",
        "source": "manual",
        "taxonomyId": "asset-tax",
        "taxonomyName": "Asset Class",
        "weightBasisPoints": 10000
      },
      {
        "assignmentId": "assignment-2",
        "categoryId": "equity",
        "categoryKey": "value",
        "categoryName": "Value",
        "source": "ai",
        "taxonomyId": "factor-tax",
        "taxonomyName": "Factors",
        "weightBasisPoints": 10000
      }
    ],
    "resolvedAsset": {
      "assetId": "asset-aapl",
      "currency": "USD",
      "displayCode": "AAPL",
      "exchangeMic": "XNAS",
      "instrumentType": "EQUITY",
      "label": "AAPL - Apple Inc.",
      "matchedBy": "name",
      "name": "Apple Inc.",
      "symbol": "AAPL"
    }
  }
}
