crates/ai/tests/snapshots/tool_outputs_parity__output_record_activity_buy.snap
---
source: crates/ai/tests/tool_outputs_parity.rs
expression: result
---
{
  "ok": {
    "availableAccounts": [
      {
        "accountType": "SECURITIES",
        "currency": "USD",
        "id": "acc-1",
        "name": "Main Broker"
      }
    ],
    "availableSubtypes": [],
    "draft": {
      "accountId": "acc-1",
      "accountName": "Main Broker",
      "activityDate": "2026-01-17",
      "activityType": "BUY",
      "amount": null,
      "assetId": null,
      "assetKind": null,
      "assetName": "AAPL",
      "currency": "USD",
      "fee": null,
      "isCustomAsset": true,
      "notes": null,
      "priceSource": "user",
      "pricingMode": "MARKET",
      "quantity": 20.0,
      "subtype": null,
      "symbol": "AAPL",
      "tax": null,
      "unitPrice": 240.0
    },
    "resolvedAsset": null,
    "validation": {
      "errors": [],
      "isValid": false,
      "missingFields": [
        "asset_kind"
      ]
    }
  }
}
